fixed all modals

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <li class="nav-item"><a class="nav-item-child" href="https://online.cmc.edu/SOURCEdonate" target="_blank" onClick="ga('send', 'event', 'Donate', 'Click', 'Donate-Menu');">Donate to SOURCE!</a></li>
                     </ul>
 
-                    <a href="https://www.linkedin.com/in/kevin-cunanan/"><p class="header-section-scroll-copyright">&#169; 2018 KC</p></a>
+                    <a href="https://www.linkedin.com/in/kevin-cunanan/"><p class="header-section-scroll-copyright">&#169; 201 KC</p></a>
                 </nav>
             </div>
         </nav>
@@ -255,7 +255,7 @@
         </section>
         <!-- END ABOUT -->
         <!-- STUDENT DEVELOPMENT -->
-        <section id="student-development" class="bg-color-sky-light">
+        <section id="student-development">
             <div class="content-md container-sm">
                 <!-- Heading v1 -->
                 <div class="heading-v1 text-center margin-b-80">
@@ -285,7 +285,7 @@
                                             <div class="tab-pane-content">
                                                 <h2 class="font-size-22 color-base">The Unexpected Support: Feedback and the First-Year</h2><br>
                                                 <p>When I first applied for SOURCE, I really did not know what I was getting myself into. I knew I loved nonprofits and I kind of knew something about consulting. But I did not expect the amount of support and structure I would receive my first year through the Associate Consultant (AC) Program.</p><br>
-                                                <a id="design-task-force-modal-button" href="#design-task-force-modal" onClick="ga('send', 'event', 'Articles', 'Click', 'Design Task Force');"><button type="button" class="btn-read-more btn-black-border btn-base-sm">Read More</button></a>
+                                                <a id="ac-program-modal-button" href="#ac-program-modal" onClick="ga('send', 'event', 'Articles', 'Click', 'AC Program');"><button type="button" class="btn-read-more btn-black-border btn-base-sm">Read More</button></a>
                                             </div>
                                         </div>
                                         <div role="tabpanel" class="show-pane tab-pane col-md-6 col-sm-6" id="tab-v3-2">
@@ -302,7 +302,7 @@
                                                 <div class="tab-pane-content">
                                                     <h2 class="font-size-22 color-base">Self-Help Books Didn’t Teach Me to Lead; SOURCE Did</h2>
                                                     <p>Leading any group of people is challenging. Leading smart, hard-working people isn’t any easier. They are the confident team members you want by your side, but they also tend to have the strongest ideas about how things should be done. Every person on my SOURCE team this year was a leader. And every person on my team could have led the team instead of me.</p>
-                                                    <a id="nll-task-force-modal-button" href="#nll-task-force-modal" onClick="ga('send', 'event', 'Articles', 'Click', 'Nonprofit Lunch and Learn Task Force');"><button type="button" class="btn-read-more btn-black-border btn-base-sm">Read More</button></a>
+                                                    <a id="leadership-modal-button" href="#leadership-modal" onClick="ga('send', 'event', 'Articles', 'Click', 'Leadership');"><button type="button" class="btn-read-more btn-black-border btn-base-sm">Read More</button></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -313,8 +313,66 @@
                     </div>
                 </section>
         <!-- END STUDENT DEVELOPMENT -->
+        <!-- NONPROFIT PARTNERS -->
+        <section id="nonprofit-partners" class="bg-color-sky-light">
+            <div class="content-md container-sm">
+                <!-- Heading v1 -->
+                <div class="heading-v1 text-center margin-b-80">
+                    <h2 class="heading-v1-title">Empowering our Nonprofit Partners</h2>
+                </div>
+                <!-- End Heading v1 -->
+                <div class="row">
+                        <div class="col-md-10 col-md-offset-1">
+                            <!-- Tab v3 -->
+                            <div class="tab-v3">
+                                <!-- Tab panes -->
+                                <!-- Please note Tab v3 doesn't support CSS3 animations! -->
+                                <div class="tab-content">
+                                    <div class="row">
+                                        <div role="tabpanel" class="show-pane tab-pane-left tab-pane col-md-6 col-sm-6" id="tab-v3-1">
+                                            <div class="team-v2 wow fadeInLeft" data-wow-duration=".2" data-wow-delay=".2s">
+                                                <div class="team-v2-img-gradient">
+                                                    <img class="lazy img-responsive" src="assets/img/bg.png" data-src="assets/img/SOURCE/headshots/olivia-ison-headshot.jpg" alt="">
+                                                </div>
+                                                <div class="team-v2-content">
+                                                    <div class="team-v2-center-align">
+                                                    <h4 class="team-v2-member">Olivia Ison</h4>
+                                                    <span class="team-v2-member-position">Lead Consultant</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="tab-pane-content">
+                                                <h2 class="font-size-22 color-base">Raising a Nonprofit</h2>
+                                                <p>Most nonprofits are bred from passion; they are coordinated responses to a recognized need. An individual or a group of people is struck by a problem, then sets out to address it. In doing so, they often focus more on their work externally than internally; they focus on where the passion is concentrated. However, despite the undeniable power and momentum born from passion, organizations must also build strong foundations to increase their impact and grow sustainably.</p>
+                                                <a id="raising-nonprofit-modal-button" href="#raising-nonprofit-modal" onClick="ga('send', 'event', 'Articles', 'Click', 'Design Task Force');"><button type="button" class="btn-read-more btn-black-border btn-base-sm">Read More</button></a>
+                                            </div>
+                                        </div>
+                                        <div role="tabpanel" class="show-pane tab-pane col-md-6 col-sm-6" id="tab-v3-2">
+                                                <div class="team-v2 wow fadeInRight" data-wow-duration=".2" data-wow-delay=".2s">
+                                                    <div class="team-v2-img-gradient">
+                                                        <img class="lazy img-responsive" src="assets/img/bg.png" data-src="assets/img/SOURCE/headshots/grace-hickey-headshot.jpg" alt=""> </div>
+                                                    <div class="team-v2-content">
+                                                        <div class="team-v2-center-align">
+                                                        <h4 class="team-v2-member">Grace Hickey</h4>
+                                                        <span class="team-v2-member-position">Associate Consultant</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="tab-pane-content">
+                                                    <h2 class="font-size-22 color-base">A Country Called Syria: The Power of IdeaJams</h2><br>
+                                                    <p>Leading my first IdeaJam was both daunting and thrilling. When I first joined SOURCE at the start of the year, I never could have imagined myself taking on so much responsibility as an Associate Consultant. Yet, when I found out that I would be leading an IdeaJam with A Country Called Syria, I was excited to help and hoping for the best.</p><br>
+                                                    <a id="ideajam-modal-button" href="#ideajam-modal" onClick="ga('send', 'event', 'Articles', 'Click', 'Nonprofit Lunch and Learn Task Force');"><button type="button" class="btn-read-more btn-black-border btn-base-sm">Read More</button></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+        <!-- END NONPROFIT PARTNERS -->
         <section id="client-impact-summary">
-            <div class="bg-color-sky-light">
                 <div class="content-md container">
                     <!-- Heading v1 -->
                     <div class="heading-v1 text-center margin-b-80">
@@ -501,7 +559,6 @@
                     </div>
                     <!--// end row -->
                 </div>
-            </div>
         </section>
         <!-- End Tabs v3 -->
         <!-- FINANCIALS -->
@@ -683,33 +740,58 @@
         <!-- End Clients v1 -->
         <!-- MODALS -->
         <div id="all-modals">
-            <div id="design-task-force-modal" class="section-modal article-modal design-task-force-modal">
+            <div id="ac-program-modal" class="section-modal article-modal ac-program-modal">
                 <div class="row margin-b-30">
                     <div class="col-sm-10 col-sm-offset-1 article-actions">
-                        <span id="btn-close-modal" class="close-design-task-force-modal"> 
+                        <span id="btn-close-modal" class="close-ac-program-modal"> 
                             <button class="btn-base-brd-slide btn-slide btn-slide-center-v1 btn-base-xs">Return To Page</button>
                         </span>
                         <span class="float-right"><img class="article-logo" src="assets/img/SOURCE%20logo%20(1).PNG"></span>
                     </div>
                 </div>
                 <div class="modal-row extra-letter-margin">
-                    {% include design-task-force-modal.html %}
+                    {% include ac-program-modal.html %}
                 </div>
             </div>
-            <div id="nll-task-force-modal" class="section-modal article-modal nll-task-force-modal">
+            <div id="leadership-modal" class="section-modal article-modal leadership-modal">
                     <div class="row margin-b-30">
                         <div class="col-sm-10 col-sm-offset-1 article-actions">
-                            <span id="btn-close-modal" class="close-nll-task-force-modal"> 
+                            <span id="btn-close-modal" class="close-leadership-modal"> 
                                 <button class="btn-base-brd-slide btn-slide btn-slide-center-v1 btn-base-xs">Return To Page</button>
                             </span>
                             <span class="float-right"><img class="article-logo" src="assets/img/SOURCE%20logo%20(1).PNG"></span>
                         </div>
                     </div>
                     <div class="modal-row extra-letter-margin">
-                        {% include nll-task-force-modal.html %}
+                        {% include leadership-modal.html %}
                     </div>
             </div>
-        </div>
+                        <div id="raising-nonprofit-modal" class="section-modal article-modal raising-nonprofit-modal">
+                <div class="row margin-b-30">
+                    <div class="col-sm-10 col-sm-offset-1 article-actions">
+                        <span id="btn-close-modal" class="close-raising-nonprofit-modal"> 
+                            <button class="btn-base-brd-slide btn-slide btn-slide-center-v1 btn-base-xs">Return To Page</button>
+                        </span>
+                        <span class="float-right"><img class="article-logo" src="assets/img/SOURCE%20logo%20(1).PNG"></span>
+                    </div>
+                </div>
+                <div class="modal-row extra-letter-margin">
+                    {% include raising-nonprofit-modal.html %}
+                </div>
+            </div>
+            <div id="ideajam-modal" class="section-modal article-modal ideajam-modal">
+                    <div class="row margin-b-30">
+                        <div class="col-sm-10 col-sm-offset-1 article-actions">
+                            <span id="btn-close-modal" class="close-ideajam-modal"> 
+                                <button class="btn-base-brd-slide btn-slide btn-slide-center-v1 btn-base-xs">Return To Page</button>
+                            </span>
+                            <span class="float-right"><img class="article-logo" src="assets/img/SOURCE%20logo%20(1).PNG"></span>
+                        </div>
+                    </div>
+                    <div class="modal-row extra-letter-margin">
+                        {% include ideajam-modal.html %}
+                    </div>
+            </div>
         <!-- END MODALS -->
         <!-- CONTACT -->
         <section id="contact">
@@ -728,7 +810,7 @@
                         </div>
                         <div class="col-sm-5 margin-t-50 text-right">
                             <a href="javascript:void(0);" class="js-back-to-top back-to-top-theme"></a>
-                            <a href="https://www.linkedin.com/in/kevin-cunanan/"><p class="footer-v7-text">&#169; 2018 KC</p></a>
+                            <a href="https://www.linkedin.com/in/kevin-cunanan/"><p class="footer-v7-text">&#169; 2019 KC</p></a>
                         </div>
                     </div>
                     <!--// end row -->
