updated client photos

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                     <div class="col-md-4 md-margin-b-50">
                         <!-- Heading v1 -->
                         <div class="heading-v1 margin-t-10">
-                            <h2 class="heading-v1-title">Our 2018-2018 SOURCE Clients</h2>
+                            <h2 class="heading-v1-title">Our 2018-2019 SOURCE Clients</h2>
                             <p class="heading-v1-text">Thank you for a wonderful year of partnership and community impact</p>
                         </div>
                         <!-- End Heading v1 -->
@@ -683,29 +683,29 @@
                         <ul class="list-inline owl-carousel-clients-five-item clients-v1">
                             <li class="item client-item-padding">
                                 <div class="clients-v1-item">
-                                    <a href="https://childrensfoundationofamerica.org/" target="_blank">
-                                        <img class="clients-v1-img clients-v1-img-default" src="/assets/img/SOURCE/clients/childrens-foundation-of-america.jpg" alt="">
+                                    <a href="https://www.abilityfirst.org/" target="_blank">
+                                        <img class="clients-v1-img clients-v1-img-default" src="/assets/img/SOURCE/clients/abilityfirst-logo.png" alt="">
                                     </a>
                                 </div>
                             </li>
                             <li class="item client-item-padding">
                                 <div class="clients-v1-item">
-                                    <a href="http://claremontmuseum.org/" target="_blank">
-                                        <img class="clients-v1-img clients-v1-img-default" src="/assets/img/SOURCE/clients/cma.jpg" alt="">
+                                    <a href="https://www.cacc-online.org/" target="_blank">
+                                        <img class="clients-v1-img clients-v1-img-default" src="/assets/img/SOURCE/clients/cac-logo.png" alt="">
                                     </a>
                                 </div>
                             </li>
                             <li class="item client-item-padding">
                                 <div class="clients-v1-item">
-                                    <a href="https://www.ivrt.org/" target="_blank">
-                                        <img class="clients-v1-img clients-v1-img-default" src="/assets/img/SOURCE/clients/IVRT.jpg" alt="">
+                                    <a href="https://www.chapclaremont.org/" target="_blank">
+                                        <img class="clients-v1-img clients-v1-img-default" src="/assets/img/SOURCE/clients/chap-logo.jpeg" alt="">
                                     </a>
                                 </div>
                             </li>
                             <li class="item client-item-padding">
                                 <div class="clients-v1-item">
-                                    <a href="http://www.claremontmealsonwheels.org/" target="_blank">
-                                        <img class="clients-v1-img clients-v1-img-default" src="/assets/img/SOURCE/clients/claremont-meals-on-wheels.jpg" alt="">
+                                    <a href="https://trinityys.org/" target="_blank">
+                                        <img class="clients-v1-img clients-v1-img-default" src="/assets/img/SOURCE/clients/tys-logo.png" alt="">
                                     </a>
                                 </div>
                             </li>
@@ -718,8 +718,8 @@
                             </li>
                             <li class="item client-item-padding">
                                 <div class="clients-v1-item">
-                                    <a href="https://www.pomonacommunityfoundation.org/" target="_blank">
-                                        <img class="clients-v1-img clients-v1-img-default" src="/assets/img/SOURCE/clients/pomona-community-foundation.jpg" alt="">
+                                    <a href="https://www.claremontcanopy.org/" target="_blank">
+                                        <img class="clients-v1-img clients-v1-img-default" src="/assets/img/SOURCE/clients/cc-logo.png" alt="">
                                     </a>
                                 </div>
                             </li>
