client impact summary fix

--- a/index.html
+++ b/index.html
@@ -406,8 +406,10 @@
                                                 <h2 class="font-size-22 color-base">Pomona Hope</h2>
                                                 <p><strong>Mission: </strong>Pomona Hope is a community-driven, faith-based non-profit whose local partnerships and holistic programs cultivate meaningful relationships and empower people of all backgrounds, particularly at-risk youth and their families, to work together toward personal and community transformation.</p><p><strong>The SOURCE team:</strong></p>
                                                 <ul>
-                                                    <li>Designed a live inventory system to better organize donations and report fair market values of donations</li>
-                                                    <li>Organized an open house of nonprofits to discuss demands for a nonprofit network within the Greater Claremont area</li>
+                                                    <li>Presented a Personnel Policy Guide to the new Executive Director.</li>
+                                                    <li>Proposed a CRM implementation strategy.</li>
+                                                    <li>Created a “Save the Garden” fundraising strategy.</li>
+                                                    <li>Helped apply for grants and establish corporate sponsorship.</li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -426,8 +428,11 @@
                                                     <h2 class="font-size-22 color-base">Claremont Canopy</h2>
                                                     <p><strong>Mission: </strong>Claremont Canopy addresses the obstacles facing refugees by working with community leaders to provide resources for employment, education, and community integration.</p><p><strong>The SOURCE team:</strong></p>
                                                     <ul>
-                                                        <li>Implemented a Customer Relationship Management software to centralize data collection</li>
-                                                        <li>Formed and analyzed a membership survey to develop a better sense of membership incentives and interests</li>
+                                                        <li>Interviewed each individual member of the organization.</li>
+                                                        <li>Conducted SWOT analysis and presented an overall trend analysis.</li>
+                                                        <li>Redefined organizational roles.</li>
+                                                        <li>Compiled resources and partnerships.</li>
+                                                        <li>Recommended creative marketing strategies.</li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -451,10 +456,7 @@
                                                     <h2 class="font-size-22 color-base">Trinity Youth Services</h2>
                                                     <p><strong>Mission:</strong> Trinity Youth Services provides quality short-term residential programs, foster care and adoption services, and mental health programs to traumatized, abused, neglected and abandoned children.</p><p><strong>The SOURCE team:</strong></p>
                                                     <ul>
-                                                        <li>Interviewed stakeholders to develop a strategic plan</li>
-                                                        <li>Created instructional manuals and financial outreach tracking tools for interns</li>
-                                                        <li>Compiled a video-making guide to change how information was provided</li>
-                                                        <li>Assembled an impact analysis survey</li>
+                                                        <li>Performed a regional data analysis, identified marketing outreach opportunities and created messaging to recruit more foster families.</li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -474,9 +476,8 @@
                                                     <h2 class="font-size-22 color-base">Ability First</h2>
                                                     <p><strong>Mission: </strong>Ability First provides a variety of programs designed to help people with disabilities achieve their personal best throughout their lives. We do this by: creating targeted programming to help an individual successfully transition from childhood to adult life.</p><p><strong>The SOURCE team:</strong></p>
                                                     <ul>
-                                                        <li>Redesigned the website to be more modern and increase traffic</li>
-                                                        <li>Researched and implemented a Customer Relationship Management software that best suited the nonprofit’s size, budget and needs</li>
-                                                        <li>Structured a Treasurer onboarding manual to enable succession planning</li>
+                                                        <li>Created a fundraising trends and Giving Day best practices report.</li>
+                                                        <li>Designed a personal narratives template and incorporated into fundraising asks.</li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -498,8 +499,11 @@
                                                     <h2 class="font-size-22 color-base">Claremont Homeless Advocacy Program</h2>
                                                     <p><strong>Mission: </strong>Claremont Homeless Advocacy Program is focused on providing empowering mentorship to enable single men and women to work again and secure sustainable housing.</p><p><strong>The SOURCE team:</strong></p>
                                                     <ul>
-                                                        <li>Opened an Etsy store to sell resident-made art and raise revenue</li>
-                                                        <li>Formed a custom Excel inventory and sales tracking tool</li>
+                                                        <li>Surveyed volunteers and created a comprehensive volunteer report and recruitment strategy.</li>
+                                                        <li>Put CHAP on VolunteerMatch.com and LinkedIn</li>
+                                                        <li>Developed volunteer-centric organizational descriptions and volunteer descriptions.</li>
+                                                        <li>Aggregated large volume of volunteer testimonials.</li>
+                                                        <li>Created and developed entirely new volunteer-centric website.</li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -519,8 +523,9 @@
                                                     <h2 class="font-size-22 color-base">Pilgrim Place</h2>
                                                     <p><strong>Mission: </strong>Pilgrim Place works towards fostering a vibrant and inclusive senior community committed to justice and peace.</p><p><strong>The SOURCE team:</strong></p>
                                                     <ul>
-                                                        <li>Researched other community foundations to present a strategic plan recommendation</li>
-                                                        <li>Worked with the nonprofit to form a “Why Pomona Community Foundation?” statement</li>
+                                                        <li>Identified need for building deconstruction and conducted research regarding building deconstruction tailored to client’s specifications.</li>
+                                                        <li>Presented a building deconstruction strategy to the client.</li>
+                                                        <li>Performed organization-wide focus group analysis to pinpoint main strengths for marketing strategy.</li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -540,12 +545,11 @@
                                                 </div>
                                                 <div class="tab-pane-content">
                                                     <h2 class="font-size-22 color-base">Children's Advocacy Center</h2>
-                                                    <p><strong>Mission:</strong> Children's Advocacy Center helps local communities respond to allegations of child abuse in ways that are effective and efficient – and put the needs of child victims first.</p><p><strong>The SOURCE team:</strong></p>
+                                                    <p><strong>Mission:</strong> The Children’s Advocacy Center is committed to using a multi-disciplinary team approach to assist children who are victims of physical or sexual abuse, or who have witnessed acts of violence, as well as providing these services to people of any age with developmental disabilities. All services will be provided in a supportive environment by individuals trained in national best practices to optimize positive outcomes and reduce trauma.</p><p><strong>The SOURCE team:</strong></p>
                                                     <ul>
-                                                        <li>Analyzed the nonprofit, board and Executive Director through a survey</li>
-                                                        <li>Organized and lead the nonprofit’s first board retreat</li>
-                                                        <li>Revamped the website and provided a website manual with best practices</li>
-                                                        <li>Researched techniques for audience expansion and diversification, specifically focusing on the younger generation</li>
+                                                        <li>Created marketing messaging to new donors including a tagline, video and pamphlet.</li>
+                                                        <li>Revised marketing message language.</li>
+                                                        <li>Conducted current/potential donor analysis to select target donor group and develop strategies around their needs/interests.</li>
                                                     </ul>
                                                 </div>
                                             </div>
